soluciones/deploy-laravel.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: deploy-laravel
  namespace: laravel
  labels:
    app: laravelapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravelapp
  template:
    metadata:
      labels:
        app: laravelapp
    spec:
      containers:
      - name: laravelapp
        image: bitnami/laravel:11.0.8
        ports:
          - containerPort: 8000
