soluciones/deploy-mariadb.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mariadb-deploy
  namespace: laravel
spec:
  selector:  
    matchLabels:
      app: mariadbapp
  replicas: 1
  template:  
    metadata:
      labels:
        app: mariadbapp
    spec:
      containers:
      - name: mariadbapp
        image: bitnami/mariadb:latest
        ports:
        - containerPort: 3306
        volumeMounts:
          - name:  mariadb-data
            mountPath: /bitnami/mariadb
      volumes:
      - name:  mariadb-data
