soluciones/deploy-phpmyadmin.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phpmyadmin-deploy
  namespace: phpmyadmin
spec:
  selector:  
    matchLabels:
      app: phpmyadmin
  replicas: 1
  template:  
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:5.2.1
        ports:
        - containerPort: 80
