soluciones/deploy-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-postgres
  namespace: laravel
  labels:
    app: postgres
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres163
          image: postgres:16.3
          ports:
            - containerPort: 3306
              name: db-port
