soluciones/service-laravel.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-laravel
  namespace: laravel
  labels:
    app: laravelapp
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: laravelapp
