soluciones/service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: phpmyadmin
  labels:
     app: phpmyadmin
spec:
  ports:
  - port: 80
  selector:
     app: phpmyadmin
