soluciones/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-postgres
  namespace: laravel
  labels:
    app: postgres
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: postgres
